[package]
name = "minsize"
version = "0.1.1"
edition = "2021"
description = "Collections with a statically known minimum size (using const generics)"
repository = "https://github.com/elomatreb/minsize"
license = "MIT OR Apache-2.0"
keywords = ["vec", "nonempty", "non-empty", "minimum-size", "const-generics"]
categories = ["data-structures", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.2.0", optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde = "1.0.126"
serde_json = "1.0.64"
